Setup basic structure and organize style folders

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>webpack starterkit</title>
+  <title>Tomodachi</title>
 </head>
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <div id="main">
+    <ul>
+      <li class="option" id="food">food</li>
+      <li class="option" id="lights">lights</li>
+      <li class="option" id="play">play</li>
+      <li class="option" id="medicine">medicine</li>
+    </ul>
+    <canvas></canvas>
+    <ul>
+      <li class="option" id="bath">bath</li>
+      <li class="option" id="health">health</li>
+      <li class="option" id="discipline">discipline</li>
+      <li>attention</li>
+    </ul>
+    <div id="button-panel">
+      <button class="button" id="button-select"></button>
+      <button class="button" id="button-enter"></button>
+      <button class="button" id="button-cancel"></button>
+    </div>
+  </div>
 </body>
 </html>
