Configure buttons and options

--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tomodachi</title>
+  <style>
+    #main { display: none }
+  </style>
 </head>
 <body>
   <div id="main">
-    <ul>
+    <ul class="option-panel">
       <li class="option" id="food">food</li>
       <li class="option" id="lights">lights</li>
       <li class="option" id="play">play</li>
       <li class="option" id="medicine">medicine</li>
     </ul>
     <canvas></canvas>
-    <ul>
+    <ul class="option-panel">
       <li class="option" id="bath">bath</li>
       <li class="option" id="health">health</li>
       <li class="option" id="discipline">discipline</li>
-      <li>attention</li>
+      <li class="attention">attention</li>
     </ul>
     <div id="button-panel">
       <button class="button" id="button-select"></button>
